# snapgit-cli

./: CMakeLists.txt  CONTRIBUTING.md  Readme.md  build.bat  init.cpp  init.h  main.cpp  main.py  runInstructions.txt  setup.iss
.mygit/: HEAD  config  index
CommandHandlers/AddHandler/: AddHandler.cpp  AddHandler.h
CommandHandlers/BranchHandler/: BranchHandler.cpp  BranchHandler.h
CommandHandlers/CheckoutHandler/: CheckoutHandler.cpp  CheckoutHandler.h
CommandHandlers/CommitHandler/: CommitHandler.cpp  CommitHandler.h
CommandHandlers/ConfigHandler/: ConfigHandler.cpp  ConfigHandler.h
CommandHandlers/InfoHandler/: InfoHandler.cpp  InfoHandler.h
CommandHandlers/InitHandler/: InitHandler.cpp  InitHandler.h
CommandHandlers/LogHandler/: LogHandler.cpp  LogHandler.h  Loghandler.cpp
CommandHandlers/MergeHandler/: MergeHandler.cpp  MergeHandler.h
CommandHandlers/RemoveHandler/: RemoveHandler.cpp  RemoveHandler.h
CommandHandlers/ResetHandler/: ResetHandler.cpp  ResetHandler.h
CommandHandlers/RestoreHandler/: RestoreHandler.cpp  RestoreHandler.h
CommandHandlers/StatusHandler/: StatusHandler.cpp  StatusHandler.h
Helper/: Ignore.cpp  Ignore.h
Helper/GetAllBranches/: GetAllBranches.cpp  GetAllBranches.h
Helper/GetAllCommits/: GetAllCommits.cpp  GetAllCommits.h
Helper/GetCurrentCommitHash/: GetCurrentCommitHash.cpp  GetCurrentCommitHash.h
Helper/GetHeadRef/: GetHeadRef.cpp  GetHeadRef.h
Helper/GetUserInfo/: GetUserInfo.cpp  GetUserInfo.h
Helper/Hash/: Hash.cpp  Hash.h
Helper/ReadCommit/: ReadCommit.cpp  ReadCommit.h
Helper/ReadIndex/: ReadIndex.cpp  ReadIndex.h
Helper/ReadTree/: ReadTree.cpp  (+1 more)
Objects/: Object.h
docs/: contributing.md  developer.md  index.md
manual_test/: file1.txt
(+69 files in other folders)
